--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ComputacionFIM</groupId>
     <artifactId>ConversorHorarios</artifactId>
-    <version>1</version>
+    <version>2</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
@@ -43,6 +43,7 @@
                             <mainClass>computacionfim.conversorhorarios.InterfazConversor</mainClass>
                         </manifest>
                     </archive>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
                     <execution>
@@ -69,4 +70,5 @@
        
         
     </build>
+    <name>Conversor</name>
 </project>
